# Soundex

./: .gitignore  CMakeLists.txt
src/: Soundex.cpp  Soundex.hpp
src/test/: SoundexTest.cpp
